--- a/IMLO_Project.ipynb
+++ b/IMLO_Project.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOp4iOHBxKslddtzhLap1Zd",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Atomix77/IMLO-IP/blob/main/IMLO_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,13 +12,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QNZzt3qRxj22"
+      },
       "source": [
         "# Load Data\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "QNZzt3qRxj22"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -55,66 +39,51 @@
         "from torchvision.transforms import ToTensor\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "training_data = datasets.Flowers102(root = \"data\", split = \"train\", download = True, transform = ToTensor())\n",
-        "test_data = datasets.Flowers102(root = \"data\", split = \"test\", download = True, transform = ToTensor())"
+        "training_data = datasets.Flowers102(root = \"./datasets\", split = \"train\", download = True, transform = ToTensor())\n",
+        "val_data = datasets.Flowers102(root = \"./datasets\", split = \"val\", download = True, transform = ToTensor())\n",
+        "test_data = datasets.Flowers102(root = \"./datasets\", split = \"test\", download = True, transform = ToTensor())\n",
+        "\n",
+        "batch_size = 64\n",
+        "training_dataloader = DataLoader(training_data, batch_size = batch_size)\n",
+        "val_dataloader = DataLoader(val_data, batch_size = batch_size)\n",
+        "test_dataloader = DataLoader(test_data, batch_size = batch_size)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Custom Dataset"
-      ],
       "metadata": {
         "id": "HmDd2O72Vjnq"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class CustomImageDataset(Dataset):\n",
-        "  def __int__(self, 102flowers.tgz)"
-      ],
-      "metadata": {
-        "id": "qDWqWkmLVNVD"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "batch_size = 64\n",
-        "\n",
-        "training_dataloader = DataLoader(training_data, batch_size = batch_size)\n",
-        "test_dataloader = DataLoader(test_data, batch_size = batch_size)\n",
-        "\n",
-        "df = pd.DataFrame(training_data)"
-      ],
-      "metadata": {
-        "id": "4alFL2TqzHjH",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        },
-        "outputId": "efe88b70-bbc1-4f04-b40e-6183814fbd11"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'Flowers102' object has no attribute 'data'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-2c53f7e5d717>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtest_dataloader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Flowers102' object has no attribute 'data'"
-          ]
-        }
+        "#Custom Dataset"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qDWqWkmLVNVD"
+      },
+      "outputs": [],
+      "source": [
+        "class flowersDataset(Dataset):\n",
+        "  def __init__(self, root, transform = None):\n",
+        "    self.root = root\n",
+        "    self.transform = transform\n",
+        "  \n",
+        "  def __len__(self):\n",
+        "    return len(self.data)\n",
+        "\n",
+        "  def __getitem__(self, idx):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mm61QyraSwVC"
+      },
+      "outputs": [],
       "source": [
         "device = (\n",
         "    \"cuda\"\n",
@@ -124,33 +93,44 @@
         "    else \"cpu\"\n",
         ")\n",
         "print(f\"Using {device} device\")"
-      ],
-      "metadata": {
-        "id": "mm61QyraSwVC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Create Model"
-      ],
       "metadata": {
         "id": "Bg48Ie1axrjX"
-      }
+      },
+      "source": [
+        "#Create Model"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "class NeuralNetwork(nn.Module):\n",
-        "  def __init__(self):"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "DEtkf2DSxjNd"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "class NeuralNetwork(nn.Module):\n",
+        "  def __init__(self):"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOp4iOHBxKslddtzhLap1Zd",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
