added training accuracy

--- a/IMLO_Project.ipynb
+++ b/IMLO_Project.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# import torch\n",
+        "# torch.cuda.is_available()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "QNZzt3qRxj22"
@@ -22,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "rPqbMcduQaTJ"
       },
@@ -35,49 +45,6 @@
             "  from .autonotebook import tqdm as notebook_tqdm\n",
             "c:\\Users\\tomha\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torchvision\\io\\image.py:13: UserWarning: Failed to load image Python extension: Could not find module 'C:\\Users\\tomha\\AppData\\Local\\Programs\\Python\\Python310\\Lib\\site-packages\\torchvision\\image.pyd' (or one of its dependencies). Try using the full path with constructor syntax.\n",
             "  warn(f\"Failed to load image Python extension: {e}\")\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading https://thor.robots.ox.ac.uk/datasets/flowers-102/102flowers.tgz to datasets\\flowers-102\\102flowers.tgz\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 344862509/344862509 [00:13<00:00, 25394181.24it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting datasets\\flowers-102\\102flowers.tgz to datasets\\flowers-102\n",
-            "Downloading https://thor.robots.ox.ac.uk/datasets/flowers-102/imagelabels.mat to datasets\\flowers-102\\imagelabels.mat\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 502/502 [00:00<00:00, 501558.03it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading https://thor.robots.ox.ac.uk/datasets/flowers-102/setid.mat to datasets\\flowers-102\\setid.mat\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 14989/14989 [00:00<00:00, 14968672.06it/s]\n"
           ]
         }
       ],
@@ -139,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "lJxe_JHFdp5v"
       },
@@ -162,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -201,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "DEtkf2DSxjNd"
       },
@@ -234,6 +201,40 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Testing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "uMAaXK3bENaq"
+      },
+      "outputs": [],
+      "source": [
+        "def testModel(dataloader, model, lossFunction):\n",
+        "  print('Testing')\n",
+        "  model.eval()\n",
+        "  total = 0\n",
+        "  correct = 0\n",
+        "  testLoss = 0\n",
+        "  \n",
+        "  with torch.no_grad():\n",
+        "    for X, y in dataloader:\n",
+        "      pred = model(X)\n",
+        "      total += y.size(0)\n",
+        "      testLoss += lossFunction(pred, y).item()\n",
+        "      correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
+        "  \n",
+        "  testLoss = testLoss/total\n",
+        "  correct = correct/total\n",
+        "  print(f\"Accuracy: {(100*correct):>0.1f}%, Avg loss: {testLoss:>8f} \\n\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "u1w_yEPkDiOo"
       },
@@ -243,57 +244,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "id": "uMAaXK3bENaq"
-      },
-      "outputs": [],
-      "source": [
-        "def trainingLoop(dataloader, model, lossFunction, optimizer):\n",
-        "  size = len(dataloader.dataset)\n",
-        "  model.train()\n",
-        "\n",
-        "  for batch, (X, Y) in enumerate(dataloader):\n",
-        "    pred = model(X)\n",
-        "    loss = lossFunction(pred, Y)\n",
-        "\n",
-        "    loss.backward()\n",
-        "    optimizer.step()\n",
-        "    optimizer.zero_grad()\n",
-        "\n",
-        "    if batch % 100 == 0:\n",
-        "      loss, current = loss.item(), batch * batchSize + len(X)\n",
-        "      print(f\"loss: {loss:>7f}  [{current:>5d}/{size:>5d}]\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "s1wDws8xJOfQ"
       },
       "outputs": [],
       "source": [
-        "def testingLoop(dataloader, model, lossFunction):\n",
-        "  model.eval()\n",
-        "  size = len(dataloader.dataset)\n",
-        "  numBatches = len(dataloader)\n",
-        "  testLoss, correct = 0, 0\n",
-        "\n",
-        "  with torch.no_grad():\n",
+        "def trainingModel(dataloader, model, lossFunction, optimizer, epochs):\n",
+        "  model.train()\n",
+        "  for epoch in range(epochs):\n",
+        "    print(f'Epoch: {epoch+1}/{epochs}:')\n",
+        "    print('Training Model')\n",
+        "    currentLoss = 0.0\n",
+        "    correct = 0\n",
+        "    total = 0\n",
+        "    testLoss = 0\n",
+        "    \n",
         "    for X, y in dataloader:\n",
+        "      optimizer.zero_grad()\n",
+        "      \n",
         "      pred = model(X)\n",
+        "      loss = lossFunction(pred, y)\n",
+        "\n",
+        "      loss.backward()\n",
+        "      optimizer.step()\n",
+        "\n",
+        "      currentLoss += loss.item()\n",
+        "\n",
+        "      total += y.size(0)\n",
         "      testLoss += lossFunction(pred, y).item()\n",
         "      correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
-        "\n",
-        "    testLoss /= numBatches\n",
-        "    correct /= size\n",
-        "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {testLoss:>8f} \\n\")"
+        "    \n",
+        "    testLoss = testLoss/total\n",
+        "    correct = correct/total\n",
+        "    print(f'Accuracy {(100*correct):>0.1f}%, Loss: {currentLoss / len(dataloader):.5f}')\n",
+        "    testModel(testDataloader, model, lossFunction)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -307,59 +297,147 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 1\n",
-            "-------------------------------\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "loss: 4.625613  [   64/ 1020]\n",
-            "Test Error: \n",
-            " Accuracy: 1.1%, Avg loss: 4.617657 \n",
+            "Epoch: 1/20:\n",
+            "Training Model\n",
+            "Accuracy 1.0%, Loss: 5.74630\n",
+            "Testing\n",
+            "Accuracy: 3.0%, Avg loss: 0.069219 \n",
             "\n",
-            "Epoch 2\n",
-            "-------------------------------\n",
-            "loss: 4.610216  [   64/ 1020]\n",
-            "Test Error: \n",
-            " Accuracy: 2.0%, Avg loss: 4.604562 \n",
+            "Epoch: 2/20:\n",
+            "Training Model\n",
+            "Accuracy 9.8%, Loss: 3.97329\n",
+            "Testing\n",
+            "Accuracy: 11.2%, Avg loss: 0.060064 \n",
             "\n",
-            "Epoch 3\n",
-            "-------------------------------\n",
-            "loss: 4.603364  [   64/ 1020]\n",
-            "Test Error: \n",
-            " Accuracy: 2.7%, Avg loss: 4.593190 \n",
+            "Epoch: 3/20:\n",
+            "Training Model\n",
+            "Accuracy 22.7%, Loss: 3.19975\n",
+            "Testing\n",
+            "Accuracy: 15.7%, Avg loss: 0.060507 \n",
             "\n",
-            "Epoch 4\n",
-            "-------------------------------\n",
-            "loss: 4.589000  [   64/ 1020]\n",
-            "Test Error: \n",
-            " Accuracy: 2.7%, Avg loss: 4.581672 \n",
+            "Epoch: 4/20:\n",
+            "Training Model\n",
+            "Accuracy 36.0%, Loss: 2.60966\n",
+            "Testing\n",
+            "Accuracy: 19.9%, Avg loss: 0.060589 \n",
             "\n",
-            "Epoch 5\n",
-            "-------------------------------\n",
-            "loss: 4.570213  [   64/ 1020]\n",
-            "Test Error: \n",
-            " Accuracy: 4.0%, Avg loss: 4.569005 \n",
+            "Epoch: 5/20:\n",
+            "Training Model\n",
+            "Accuracy 46.7%, Loss: 2.13329\n",
+            "Testing\n",
+            "Accuracy: 18.0%, Avg loss: 0.065954 \n",
+            "\n",
+            "Epoch: 6/20:\n",
+            "Training Model\n",
+            "Accuracy 49.6%, Loss: 1.94083\n",
+            "Testing\n",
+            "Accuracy: 19.4%, Avg loss: 0.064733 \n",
+            "\n",
+            "Epoch: 7/20:\n",
+            "Training Model\n",
+            "Accuracy 57.0%, Loss: 1.68075\n",
+            "Testing\n",
+            "Accuracy: 19.3%, Avg loss: 0.071622 \n",
+            "\n",
+            "Epoch: 8/20:\n",
+            "Training Model\n",
+            "Accuracy 61.4%, Loss: 1.47007\n",
+            "Testing\n",
+            "Accuracy: 20.2%, Avg loss: 0.076843 \n",
+            "\n",
+            "Epoch: 9/20:\n",
+            "Training Model\n",
+            "Accuracy 67.2%, Loss: 1.24704\n",
+            "Testing\n",
+            "Accuracy: 21.1%, Avg loss: 0.080798 \n",
+            "\n",
+            "Epoch: 10/20:\n",
+            "Training Model\n",
+            "Accuracy 67.8%, Loss: 1.17811\n",
+            "Testing\n",
+            "Accuracy: 22.0%, Avg loss: 0.081107 \n",
+            "\n",
+            "Epoch: 11/20:\n",
+            "Training Model\n",
+            "Accuracy 74.9%, Loss: 0.95526\n",
+            "Testing\n",
+            "Accuracy: 23.6%, Avg loss: 0.084418 \n",
+            "\n",
+            "Epoch: 12/20:\n",
+            "Training Model\n",
+            "Accuracy 77.8%, Loss: 0.79371\n",
+            "Testing\n",
+            "Accuracy: 20.6%, Avg loss: 0.100692 \n",
+            "\n",
+            "Epoch: 13/20:\n",
+            "Training Model\n",
+            "Accuracy 79.9%, Loss: 0.74753\n",
+            "Testing\n",
+            "Accuracy: 22.3%, Avg loss: 0.097416 \n",
+            "\n",
+            "Epoch: 14/20:\n",
+            "Training Model\n",
+            "Accuracy 83.3%, Loss: 0.63859\n",
+            "Testing\n",
+            "Accuracy: 21.0%, Avg loss: 0.103524 \n",
+            "\n",
+            "Epoch: 15/20:\n",
+            "Training Model\n",
+            "Accuracy 83.4%, Loss: 0.61558\n",
+            "Testing\n",
+            "Accuracy: 22.1%, Avg loss: 0.102105 \n",
+            "\n",
+            "Epoch: 16/20:\n",
+            "Training Model\n",
+            "Accuracy 84.9%, Loss: 0.53300\n",
+            "Testing\n",
+            "Accuracy: 22.3%, Avg loss: 0.106894 \n",
+            "\n",
+            "Epoch: 17/20:\n",
+            "Training Model\n",
+            "Accuracy 88.4%, Loss: 0.41497\n",
+            "Testing\n",
+            "Accuracy: 22.5%, Avg loss: 0.111587 \n",
+            "\n",
+            "Epoch: 18/20:\n",
+            "Training Model\n",
+            "Accuracy 89.2%, Loss: 0.40717\n",
+            "Testing\n",
+            "Accuracy: 21.5%, Avg loss: 0.116609 \n",
+            "\n",
+            "Epoch: 19/20:\n",
+            "Training Model\n",
+            "Accuracy 88.7%, Loss: 0.42442\n",
+            "Testing\n",
+            "Accuracy: 22.0%, Avg loss: 0.116903 \n",
+            "\n",
+            "Epoch: 20/20:\n",
+            "Training Model\n",
+            "Accuracy 90.4%, Loss: 0.37010\n",
+            "Testing\n",
+            "Accuracy: 22.3%, Avg loss: 0.118504 \n",
             "\n",
             "Finished\n"
           ]
         }
       ],
       "source": [
-        "learningRate = 1e-3\n",
-        "batchSize = 64\n",
-        "epochs = 5\n",
+        "learningRate = 0.001\n",
+        "batchSize = 128\n",
+        "epochs = 20\n",
         "\n",
         "lossFunction = nn.CrossEntropyLoss()\n",
-        "optimizer = torch.optim.SGD(model.parameters(), lr=learningRate)\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=learningRate)\n",
         "\n",
-        "for i in range(epochs):\n",
-        "  print(f\"Epoch {i+1}\\n-------------------------------\")\n",
-        "  trainingLoop(trainingDataloader, model, lossFunction, optimizer)\n",
-        "  testingLoop(testDataloader, model, lossFunction)\n",
+        "trainingModel(trainingDataloader, model, lossFunction, optimizer, epochs)\n",
         "print(\"Finished\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Current Best: Accuracy: 22.6%, Avg Loss: 0.110180"
       ]
     },
     {
@@ -373,14 +451,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "id": "z6w9-UT1JYgG"
       },
       "outputs": [],
       "source": [
-        "# model = models.vgg16(weights='IMAGENET1K_V1')\n",
-        "# torch.save(model, 'model.pth')"
+        "model = models.vgg16(weights='IMAGENET1K_V1')\n",
+        "torch.save(model, 'model.pth')"
       ]
     },
     {
@@ -394,15 +472,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "id": "RUwsJFciJrm_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "Expected state_dict to be dict-like, got <class 'torchvision.models.vgg.VGG'>.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39mvgg16()\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_state_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmodel.pth\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m model\u001b[38;5;241m.\u001b[39meval()\n",
+            "File \u001b[1;32mc:\\Users\\tomha\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1620\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[1;34m(self, state_dict, strict)\u001b[0m\n\u001b[0;32m   1597\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Copies parameters and buffers from :attr:`state_dict` into\u001b[39;00m\n\u001b[0;32m   1598\u001b[0m \u001b[38;5;124;03mthis module and its descendants. If :attr:`strict` is ``True``, then\u001b[39;00m\n\u001b[0;32m   1599\u001b[0m \u001b[38;5;124;03mthe keys of :attr:`state_dict` must exactly match the keys returned\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1617\u001b[0m \u001b[38;5;124;03m    ``RuntimeError``.\u001b[39;00m\n\u001b[0;32m   1618\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1619\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(state_dict, Mapping):\n\u001b[1;32m-> 1620\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected state_dict to be dict-like, got \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mtype\u001b[39m(state_dict)))\n\u001b[0;32m   1622\u001b[0m missing_keys: List[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m   1623\u001b[0m unexpected_keys: List[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m []\n",
+            "\u001b[1;31mTypeError\u001b[0m: Expected state_dict to be dict-like, got <class 'torchvision.models.vgg.VGG'>."
+          ]
+        }
+      ],
       "source": [
-        "# model = models.vgg16()\n",
-        "# model.load_state_dict(torch.load('model.pth'))\n",
-        "# model.eval()"
+        "model = models.vgg16()\n",
+        "model.load_state_dict(torch.load('model.pth'))\n",
+        "model.eval()"
       ]
     }
   ],
