--- a/IMLO_Project.ipynb
+++ b/IMLO_Project.ipynb
@@ -12,12 +12,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 51,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Is CUDA supported by this system? True\n",
+            "CUDA version: 11.8\n"
+          ]
+        }
+      ],
       "source": [
-        "# import torch\n",
-        "# torch.cuda.is_available()"
+        "import torch\n",
+        "print(f\"Is CUDA supported by this system? {torch.cuda.is_available()}\")\n",
+        "print(f\"CUDA version: {torch.version.cuda}\")"
       ]
     },
     {
@@ -32,22 +42,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 52,
       "metadata": {
         "id": "rPqbMcduQaTJ"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\tomha\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n",
-            "c:\\Users\\tomha\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torchvision\\io\\image.py:13: UserWarning: Failed to load image Python extension: Could not find module 'C:\\Users\\tomha\\AppData\\Local\\Programs\\Python\\Python310\\Lib\\site-packages\\torchvision\\image.pyd' (or one of its dependencies). Try using the full path with constructor syntax.\n",
-            "  warn(f\"Failed to load image Python extension: {e}\")\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import torch\n",
         "from torch.utils.data import Dataset\n",
@@ -106,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 53,
       "metadata": {
         "id": "lJxe_JHFdp5v"
       },
@@ -115,6 +114,7 @@
         "batchSize = 64\n",
         "\n",
         "trainingDataloader = DataLoader(trainingData, batchSize, shuffle = True)\n",
+        "validationDataloader = DataLoader(validationData, batchSize)\n",
         "testDataloader = DataLoader(testData, batchSize)"
       ]
     },
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -142,7 +142,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using cpu device\n"
+            "Using cuda device\n"
           ]
         }
       ],
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 55,
       "metadata": {
         "id": "DEtkf2DSxjNd"
       },
@@ -208,14 +208,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "uMAaXK3bENaq"
-      },
+      "execution_count": 56,
+      "metadata": {},
       "outputs": [],
       "source": [
         "def testModel(dataloader, model, lossFunction):\n",
-        "  print('Testing')\n",
+        "  print('Testing:')\n",
         "  model.eval()\n",
         "  total = 0\n",
         "  correct = 0\n",
@@ -223,6 +221,7 @@
         "  \n",
         "  with torch.no_grad():\n",
         "    for X, y in dataloader:\n",
+        "      X, y = X.to(device), y.to(device)\n",
         "      pred = model(X)\n",
         "      total += y.size(0)\n",
         "      testLoss += lossFunction(pred, y).item()\n",
@@ -244,23 +243,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 57,
       "metadata": {
         "id": "s1wDws8xJOfQ"
       },
       "outputs": [],
       "source": [
+        "earlyStopCount = 3\n",
         "def trainingModel(dataloader, model, lossFunction, optimizer, epochs):\n",
-        "  model.train()\n",
+        "  bestValLoss = float('inf')\n",
+        "  bestValAccuracy = 0\n",
+        "  waitCounter = 0\n",
+        "\n",
         "  for epoch in range(epochs):\n",
-        "    print(f'Epoch: {epoch+1}/{epochs}:')\n",
-        "    print('Training Model')\n",
+        "    model.train()\n",
+        "    print(f'Epoch: {epoch+1}:')\n",
+        "    print('Training:')\n",
         "    currentLoss = 0.0\n",
         "    correct = 0\n",
         "    total = 0\n",
         "    testLoss = 0\n",
         "    \n",
         "    for X, y in dataloader:\n",
+        "      X, y = X.to(device), y.to(device)\n",
         "      optimizer.zero_grad()\n",
         "      \n",
         "      pred = model(X)\n",
@@ -277,13 +282,28 @@
         "    \n",
         "    testLoss = testLoss/total\n",
         "    correct = correct/total\n",
-        "    print(f'Accuracy {(100*correct):>0.1f}%, Loss: {currentLoss / len(dataloader):.5f}')\n",
-        "    testModel(testDataloader, model, lossFunction)"
+        "\n",
+        "    valLoss, valAccuracy = testModel(validationDataloader, model, lossFunction)\n",
+        "    print(f'Accuracy {(100*correct):>0.1f}%, Loss: {currentLoss / len(dataloader):.5f}, Test Losss: {testLoss:.5f}')\n",
+        "    \n",
+        "    if valLoss < bestValLoss:\n",
+        "      bestValLoss = valLoss\n",
+        "      waitCounter = 0\n",
+        "    else:\n",
+        "      waitCounter = 1\n",
+        "\n",
+        "    if valAccuracy > bestValAccuracy:\n",
+        "      bestValAccuracy = valAccuracy\n",
+        "\n",
+        "    if waitCounter >= earlyStopCount:\n",
+        "       print(f'Validation has not improved for {earlyStopCount} epochs.')\n",
+        "       break\n",
+        "  print(f'Best Accuracy: {bestValAccuracy}. Best Loss: {bestValLoss}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -297,127 +317,23 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch: 1/20:\n",
-            "Training Model\n",
-            "Accuracy 1.0%, Loss: 5.74630\n",
-            "Testing\n",
-            "Accuracy: 3.0%, Avg loss: 0.069219 \n",
-            "\n",
-            "Epoch: 2/20:\n",
-            "Training Model\n",
-            "Accuracy 9.8%, Loss: 3.97329\n",
-            "Testing\n",
-            "Accuracy: 11.2%, Avg loss: 0.060064 \n",
-            "\n",
-            "Epoch: 3/20:\n",
-            "Training Model\n",
-            "Accuracy 22.7%, Loss: 3.19975\n",
-            "Testing\n",
-            "Accuracy: 15.7%, Avg loss: 0.060507 \n",
-            "\n",
-            "Epoch: 4/20:\n",
-            "Training Model\n",
-            "Accuracy 36.0%, Loss: 2.60966\n",
-            "Testing\n",
-            "Accuracy: 19.9%, Avg loss: 0.060589 \n",
-            "\n",
-            "Epoch: 5/20:\n",
-            "Training Model\n",
-            "Accuracy 46.7%, Loss: 2.13329\n",
-            "Testing\n",
-            "Accuracy: 18.0%, Avg loss: 0.065954 \n",
-            "\n",
-            "Epoch: 6/20:\n",
-            "Training Model\n",
-            "Accuracy 49.6%, Loss: 1.94083\n",
-            "Testing\n",
-            "Accuracy: 19.4%, Avg loss: 0.064733 \n",
-            "\n",
-            "Epoch: 7/20:\n",
-            "Training Model\n",
-            "Accuracy 57.0%, Loss: 1.68075\n",
-            "Testing\n",
-            "Accuracy: 19.3%, Avg loss: 0.071622 \n",
-            "\n",
-            "Epoch: 8/20:\n",
-            "Training Model\n",
-            "Accuracy 61.4%, Loss: 1.47007\n",
-            "Testing\n",
-            "Accuracy: 20.2%, Avg loss: 0.076843 \n",
-            "\n",
-            "Epoch: 9/20:\n",
-            "Training Model\n",
-            "Accuracy 67.2%, Loss: 1.24704\n",
-            "Testing\n",
-            "Accuracy: 21.1%, Avg loss: 0.080798 \n",
-            "\n",
-            "Epoch: 10/20:\n",
-            "Training Model\n",
-            "Accuracy 67.8%, Loss: 1.17811\n",
-            "Testing\n",
-            "Accuracy: 22.0%, Avg loss: 0.081107 \n",
-            "\n",
-            "Epoch: 11/20:\n",
-            "Training Model\n",
-            "Accuracy 74.9%, Loss: 0.95526\n",
-            "Testing\n",
-            "Accuracy: 23.6%, Avg loss: 0.084418 \n",
-            "\n",
-            "Epoch: 12/20:\n",
-            "Training Model\n",
-            "Accuracy 77.8%, Loss: 0.79371\n",
-            "Testing\n",
-            "Accuracy: 20.6%, Avg loss: 0.100692 \n",
-            "\n",
-            "Epoch: 13/20:\n",
-            "Training Model\n",
-            "Accuracy 79.9%, Loss: 0.74753\n",
-            "Testing\n",
-            "Accuracy: 22.3%, Avg loss: 0.097416 \n",
-            "\n",
-            "Epoch: 14/20:\n",
-            "Training Model\n",
-            "Accuracy 83.3%, Loss: 0.63859\n",
-            "Testing\n",
-            "Accuracy: 21.0%, Avg loss: 0.103524 \n",
-            "\n",
-            "Epoch: 15/20:\n",
-            "Training Model\n",
-            "Accuracy 83.4%, Loss: 0.61558\n",
-            "Testing\n",
-            "Accuracy: 22.1%, Avg loss: 0.102105 \n",
-            "\n",
-            "Epoch: 16/20:\n",
-            "Training Model\n",
-            "Accuracy 84.9%, Loss: 0.53300\n",
-            "Testing\n",
-            "Accuracy: 22.3%, Avg loss: 0.106894 \n",
-            "\n",
-            "Epoch: 17/20:\n",
-            "Training Model\n",
-            "Accuracy 88.4%, Loss: 0.41497\n",
-            "Testing\n",
-            "Accuracy: 22.5%, Avg loss: 0.111587 \n",
-            "\n",
-            "Epoch: 18/20:\n",
-            "Training Model\n",
-            "Accuracy 89.2%, Loss: 0.40717\n",
-            "Testing\n",
-            "Accuracy: 21.5%, Avg loss: 0.116609 \n",
-            "\n",
-            "Epoch: 19/20:\n",
-            "Training Model\n",
-            "Accuracy 88.7%, Loss: 0.42442\n",
-            "Testing\n",
-            "Accuracy: 22.0%, Avg loss: 0.116903 \n",
-            "\n",
-            "Epoch: 20/20:\n",
-            "Training Model\n",
-            "Accuracy 90.4%, Loss: 0.37010\n",
-            "Testing\n",
-            "Accuracy: 22.3%, Avg loss: 0.118504 \n",
-            "\n",
-            "Finished\n"
+            "Epoch: 1:\n",
+            "Training:\n",
+            "Testing:\n",
+            "Accuracy: 3.5%, Avg loss: 0.069225 \n",
+            "\n"
+          ]
+        },
+        {
+          "ename": "TypeError",
+          "evalue": "cannot unpack non-iterable NoneType object",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[58], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m lossFunction \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mCrossEntropyLoss()\n\u001b[0;32m      6\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mAdam(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mlearningRate)\n\u001b[1;32m----> 8\u001b[0m \u001b[43mtrainingModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrainingDataloader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlossFunction\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m testModel(testDataloader, model, lossFunction)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFinished\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "Cell \u001b[1;32mIn[57], line 35\u001b[0m, in \u001b[0;36mtrainingModel\u001b[1;34m(dataloader, model, lossFunction, optimizer, epochs)\u001b[0m\n\u001b[0;32m     32\u001b[0m testLoss \u001b[38;5;241m=\u001b[39m testLoss\u001b[38;5;241m/\u001b[39mtotal\n\u001b[0;32m     33\u001b[0m correct \u001b[38;5;241m=\u001b[39m correct\u001b[38;5;241m/\u001b[39mtotal\n\u001b[1;32m---> 35\u001b[0m valLoss, valAccuracy \u001b[38;5;241m=\u001b[39m testModel(validationDataloader, model, lossFunction)\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccuracy \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m(\u001b[38;5;241m100\u001b[39m\u001b[38;5;241m*\u001b[39mcorrect)\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m>0.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%, Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcurrentLoss\u001b[38;5;250m \u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28mlen\u001b[39m(dataloader)\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.5f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Test Losss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtestLoss\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.5f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m valLoss \u001b[38;5;241m<\u001b[39m bestValLoss:\n",
+            "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
           ]
         }
       ],
@@ -430,6 +346,7 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=learningRate)\n",
         "\n",
         "trainingModel(trainingDataloader, model, lossFunction, optimizer, epochs)\n",
+        "testModel(testDataloader, model, lossFunction)\n",
         "print(\"Finished\")"
       ]
     },
@@ -437,7 +354,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Current Best: Accuracy: 22.6%, Avg Loss: 0.110180"
+        "Current Best: Accuracy: 25.2%, Avg Loss: 0.103483"
       ]
     },
     {
@@ -451,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "z6w9-UT1JYgG"
       },
@@ -472,28 +389,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "RUwsJFciJrm_"
       },
-      "outputs": [
-        {
-          "ename": "TypeError",
-          "evalue": "Expected state_dict to be dict-like, got <class 'torchvision.models.vgg.VGG'>.",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39mvgg16()\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_state_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmodel.pth\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m model\u001b[38;5;241m.\u001b[39meval()\n",
-            "File \u001b[1;32mc:\\Users\\tomha\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1620\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[1;34m(self, state_dict, strict)\u001b[0m\n\u001b[0;32m   1597\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Copies parameters and buffers from :attr:`state_dict` into\u001b[39;00m\n\u001b[0;32m   1598\u001b[0m \u001b[38;5;124;03mthis module and its descendants. If :attr:`strict` is ``True``, then\u001b[39;00m\n\u001b[0;32m   1599\u001b[0m \u001b[38;5;124;03mthe keys of :attr:`state_dict` must exactly match the keys returned\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1617\u001b[0m \u001b[38;5;124;03m    ``RuntimeError``.\u001b[39;00m\n\u001b[0;32m   1618\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1619\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(state_dict, Mapping):\n\u001b[1;32m-> 1620\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected state_dict to be dict-like, got \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mtype\u001b[39m(state_dict)))\n\u001b[0;32m   1622\u001b[0m missing_keys: List[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m   1623\u001b[0m unexpected_keys: List[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m []\n",
-            "\u001b[1;31mTypeError\u001b[0m: Expected state_dict to be dict-like, got <class 'torchvision.models.vgg.VGG'>."
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "model = models.vgg16()\n",
-        "model.load_state_dict(torch.load('model.pth'))\n",
-        "model.eval()"
+        "# model = models.vgg16()\n",
+        "# model.load_state_dict(torch.load('model.pth'))\n",
+        "# model.eval()"
       ]
     }
   ],
