--- a/IMLO_Project.ipynb
+++ b/IMLO_Project.ipynb
@@ -4494,7 +4494,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Testing: Accuracy: 75.2%, Avg loss: 0.032471 - 1000 epochs (434 mins - 7 hrs 12 mins)\n",
+        "Testing: Accuracy: 75.2%, Avg loss: 0.032671 - 1000 epochs (434 mins - 7 hrs 12 mins)\n",
         "\n",
         "Testing: Accuracy: 73.9%, Avg loss: 0.034663 - 1000 epochs (416 mins - 6 hrs 55 mins)\n",
         "\n",
@@ -4574,16 +4574,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using cuda device\n",
+            "Using cpu device\n",
             "512\n",
-            "Testing: Accuracy: 73.9%, Avg loss: 0.034663 \n",
+            "Testing: Accuracy: 73.9%, Avg loss: 0.034648 \n",
             "\n"
           ]
         }
@@ -4703,7 +4703,7 @@
         "\n",
         "newModel = NeuralNetwork(102).to(device)\n",
         "\n",
-        "newModel.load_state_dict(torch.load('bestModel.pt'))\n",
+        "newModel.load_state_dict(torch.load('bestModel.pt', map_location=torch.device('cpu')))\n",
         "newModel.eval()\n",
         "\n",
         "def testTrainedModel(dataloader, model, lossFunction):\n",
